Controller Pattern w/tsoa
